--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server",
-     "test" : "node test"
+    "start": "node server"
   },
   "author": "",
   "license": "ISC",
