--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server",
-    "test" : "npm test"
-    
+    "start": "node server"
   },
   "author": "",
   "license": "ISC",
@@ -19,5 +17,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.5"
+  },
+  "devDependencies": {
+    "grunt": "^1.4.1"
   }
 }
