--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "mongoose": "^5.13.5"
   },
   "devDependencies": {
-    "grunt": "^1.4.1"
+    "grunt": "^1.4.1",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-jshint": "^3.1.1",
+    "grunt-contrib-qunit": "^5.1.1",
+    "grunt-contrib-uglify": "^5.0.1",
+    "grunt-contrib-watch": "^1.1.0"
   }
 }
